<resources>
    <string name="app_name">BibliUTEC</string>

    <string name="fragment_home">@string/app_name</string>
    <string name="fragment_reservations">Mis Reservas</string>
    <string name="fragment_search">Buscar Libro</string>
    <string name="fragment_favorites">Mis Favoritos</string>
    <string name="fragment_profile">Mi Perfil</string>
    <string name="fragment_suggestion">Añadir una Sugerencia</string>
    <string name="fragment_details">Detalle de Libro</string>

    <string name="fragment_login">Iniciar Sesión</string>
    <string name="fragment_menu">Menu</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>